--- a/androidApp/src/main/res/values-hi/strings.xml
+++ b/androidApp/src/main/res/values-hi/strings.xml
@@ -593,4 +593,84 @@
     <!-- Beat The Bot AI Analysis -->
     <string name="beat_the_bot_ai_analysis">एआई विश्लेषण</string>
     <string name="beat_the_bot_signals_detected_fmt">%1$d संकेत पाए गए</string>
+    
+    <!-- Analysis Breakdown (ScanResultScreen) -->
+    <string name="analysis_brand_title">ब्रांड प्रतिरूपण</string>
+    <string name="analysis_brand_desc">URL किसी प्रसिद्ध ब्रांड का प्रतिरूपण करती प्रतीत होती है।</string>
+    <string name="analysis_brand_desc_specific">URL %1$s का प्रतिरूपण करती प्रतीत होती है।</string>
+    <string name="analysis_homograph_title">होमोग्राफ हमला</string>
+    <string name="analysis_homograph_desc">डोमेन नाम में मिश्रित स्क्रिप्ट वर्ण पाए गए जो वैध ब्रांडों की नकल के लिए डिज़ाइन किए गए हैं।</string>
+    <string name="analysis_protocol_title">असुरक्षित प्रोटोकॉल</string>
+    <string name="analysis_protocol_desc">URL HTTPS के बजाय HTTP का उपयोग करती है। डेटा एन्क्रिप्टेड नहीं है।</string>
+    <string name="analysis_tld_title">जोखिमपूर्ण TLD</string>
+    <string name="analysis_tld_desc">डोमेन ऐसे टॉप-लेवल डोमेन का उपयोग करता है जो आमतौर पर दुर्भावनापूर्ण साइटों से जुड़ा होता है।</string>
+    <string name="analysis_tld_desc_specific">.%1$s TLD आमतौर पर दुर्भावनापूर्ण साइटों के लिए उपयोग किया जाता है।</string>
+    <string name="analysis_ip_host_title">IP पता होस्ट के रूप में</string>
+    <string name="analysis_ip_host_desc">URL डोमेन नाम के बजाय IP पते का उपयोग करती है, जो वैध साइटों के लिए असामान्य है।</string>
+    <string name="analysis_subdomain_title">गहरा सबडोमेन</string>
+    <string name="analysis_subdomain_desc">URL में असामान्य संख्या में सबडोमेन हैं, जिनका उपयोग उपयोगकर्ताओं को गुमराह करने के लिए किया जा सकता है।</string>
+    <string name="analysis_credential_title">क्रेडेंशियल हार्वेस्टिंग</string>
+    <string name="analysis_credential_desc">URL पथ या पैरामीटर क्रेडेंशियल हार्वेस्टिंग गतिविधि का संकेत देते हैं।</string>
+    <string name="analysis_long_url_title">अत्यधिक URL लंबाई</string>
+    <string name="analysis_long_url_desc">URL असामान्य रूप से लंबी है, जिसका उपयोग वास्तविक गंतव्य को छिपाने के लिए किया जा सकता है।</string>
+    <string name="analysis_scheme_title">खतरनाक स्कीम</string>
+    <string name="analysis_scheme_desc">URL एक खतरनाक स्कीम का उपयोग करती है जो कोड निष्पादित कर सकती है।</string>
+    <string name="analysis_safe_title">URL सुरक्षित सत्यापित</string>
+    <string name="analysis_safe_desc">कोई सुरक्षा समस्या नहीं पाई गई। यह URL देखने के लिए सुरक्षित प्रतीत होती है।</string>
+    <string name="analysis_no_issues">कोई सुरक्षा समस्या नहीं पाई गई।</string>
+    <string name="analysis_at_symbol_title">@ चिह्न इंजेक्शन</string>
+    <string name="analysis_at_symbol_desc">URL में @ चिह्न है जो वास्तविक गंतव्य को छिपाने के लिए उपयोग किया जाता है।</string>
+    <string name="analysis_suspicious_path_title">संदिग्ध पथ</string>
+    <string name="analysis_suspicious_path_desc">URL पथ में फ़िशिंग में आमतौर पर उपयोग किए जाने वाले कीवर्ड हैं।</string>
+    <string name="analysis_risky_extension_title">जोखिमपूर्ण फ़ाइल एक्सटेंशन</string>
+    <string name="analysis_risky_extension_desc">URL संभावित खतरनाक फ़ाइल प्रकार की ओर इशारा करती है।</string>
+    <string name="analysis_entropy_title">यादृच्छिक डोमेन</string>
+    <string name="analysis_entropy_desc">डोमेन यादृच्छिक रूप से उत्पन्न प्रतीत होता है, फ़िशिंग में आम।</string>
+    <string name="analysis_port_title">असामान्य पोर्ट</string>
+    <string name="analysis_port_desc">URL एक गैर-मानक पोर्ट नंबर का उपयोग करती है।</string>
+    
+    <!-- Tags (ScanResultScreen) -->
+    <string name="tag_ip_address">IP पता</string>
+    <string name="tag_brand_spoof">ब्रांड स्पूफ</string>
+    <string name="tag_insecure">असुरक्षित</string>
+    <string name="tag_shortener">शॉर्टनर</string>
+    <string name="tag_risky_tld">जोखिमपूर्ण TLD</string>
+    <string name="tag_suspicious_path">संदिग्ध पथ</string>
+    <string name="tag_long_url">लंबी URL</string>
+    <string name="tag_at_injection">@ इंजेक्शन</string>
+    <string name="tag_verified_safe">सत्यापित सुरक्षित</string>
+    
+    <!-- Status Badges (ScanResultScreen) -->
+    <string name="status_scan_complete">स्कैन पूर्ण</string>
+    <string name="status_caution_advised">सावधानी की सलाह</string>
+    <string name="status_threat_detected">खतरा पाया गया</string>
+    <string name="status_analysis_complete">विश्लेषण पूर्ण</string>
+    
+    <!-- Meta Info (ScanResultScreen) -->
+    <string name="meta_analyzed_offline">&lt;5ms में ऑफ़लाइन विश्लेषित</string>
+    <string name="meta_no_data_leaves">कोई डेटा डिवाइस से बाहर नहीं जाता</string>
+    
+    <!-- Top Analysis Factors (ScanResultScreen) -->
+    <string name="top_analysis_factors_title">शीर्ष विश्लेषण कारक</string>
+    <string name="factor_category_https">HTTPS</string>
+    <string name="factor_category_domain">डोमेन</string>
+    <string name="factor_category_db_check">DB जांच</string>
+    <string name="factor_category_heuristics">ह्यूरिस्टिक्स</string>
+    <string name="factor_category_ml">ML स्कोर</string>
+    <string name="factor_ssl_valid">वैध SSL प्रमाणपत्र</string>
+    <string name="factor_ssl_valid_desc">कनेक्शन एन्क्रिप्टेड है। प्रमाणपत्र श्रृंखला सत्यापित।</string>
+    <string name="factor_ssl_missing">कोई SSL प्रमाणपत्र नहीं</string>
+    <string name="factor_ssl_missing_desc">कनेक्शन एन्क्रिप्टेड नहीं है। डेटा इंटरसेप्ट हो सकता है।</string>
+    <string name="factor_ip_address">IP पता होस्ट के रूप में</string>
+    <string name="factor_ip_address_desc">URL डोमेन नाम के बजाय IP पते का उपयोग करती है। वैध साइटों के लिए असामान्य।</string>
+    <string name="factor_domain_check">डोमेन विश्लेषण</string>
+    <string name="factor_domain_check_desc">फ़िशिंग पैटर्न के लिए डोमेन संरचना का विश्लेषण किया गया।</string>
+    <string name="factor_blacklist_clean">ब्लैकलिस्ट स्थिति: साफ़</string>
+    <string name="factor_blacklist_clean_desc">स्थानीय ऑफ़लाइन खतरा डेटाबेस में नहीं मिला।</string>
+    <string name="factor_blacklist_found">ब्लैकलिस्ट स्थिति: पाया गया</string>
+    <string name="factor_blacklist_found_desc">URL खतरा इंटेलिजेंस डेटाबेस में मिली!</string>
+    <string name="factor_heuristics_title">ह्यूरिस्टिक विश्लेषण</string>
+    <string name="factor_heuristics_desc">स्कोर: %1$d • %2$d संकेत पाए गए</string>
+    <string name="factor_ml_title">ML फ़िशिंग स्कोर</string>
+    <string name="factor_ml_desc">मशीन लर्निंग मॉडल विश्वास: %1$d%%</string>
 </resources>
