--- a/androidApp/src/main/res/values-ru/strings.xml
+++ b/androidApp/src/main/res/values-ru/strings.xml
@@ -599,4 +599,84 @@
     <!-- Beat The Bot AI Analysis -->
     <string name="beat_the_bot_ai_analysis">ИИ АНАЛИЗ</string>
     <string name="beat_the_bot_signals_detected_fmt">%1$d сигналов обнаружено</string>
+    
+    <!-- Analysis Breakdown (ScanResultScreen) -->
+    <string name="analysis_brand_title">Подмена Бренда</string>
+    <string name="analysis_brand_desc">URL-адрес похоже имитирует известный бренд.</string>
+    <string name="analysis_brand_desc_specific">URL-адрес похоже имитирует %1$s.</string>
+    <string name="analysis_homograph_title">Гомографная Атака</string>
+    <string name="analysis_homograph_desc">Обнаружены смешанные символы скриптов в имени домена, предназначенные для подделки легитимных брендов.</string>
+    <string name="analysis_protocol_title">Небезопасный Протокол</string>
+    <string name="analysis_protocol_desc">URL использует HTTP вместо HTTPS. Данные не зашифрованы.</string>
+    <string name="analysis_tld_title">Рискованный TLD</string>
+    <string name="analysis_tld_desc">Домен использует домен верхнего уровня, обычно связанный с вредоносными сайтами.</string>
+    <string name="analysis_tld_desc_specific">TLD .%1$s обычно используется для вредоносных сайтов.</string>
+    <string name="analysis_ip_host_title">IP-адрес как Хост</string>
+    <string name="analysis_ip_host_desc">URL использует IP-адрес вместо доменного имени, что необычно для легитимных сайтов.</string>
+    <string name="analysis_subdomain_title">Глубокий Поддомен</string>
+    <string name="analysis_subdomain_desc">URL имеет необычное количество поддоменов, которые могут использоваться для обмана пользователей.</string>
+    <string name="analysis_credential_title">Сбор Учётных Данных</string>
+    <string name="analysis_credential_desc">Путь или параметры URL указывают на активность сбора учётных данных.</string>
+    <string name="analysis_long_url_title">Чрезмерная Длина URL</string>
+    <string name="analysis_long_url_desc">URL необычно длинный, что может использоваться для скрытия реального назначения.</string>
+    <string name="analysis_scheme_title">Опасная Схема</string>
+    <string name="analysis_scheme_desc">URL использует опасную схему, которая может выполнять код.</string>
+    <string name="analysis_safe_title">URL Подтверждён Безопасным</string>
+    <string name="analysis_safe_desc">Проблем безопасности не обнаружено. Этот URL безопасен для посещения.</string>
+    <string name="analysis_no_issues">Проблем безопасности не обнаружено.</string>
+    <string name="analysis_at_symbol_title">Инъекция Символа @</string>
+    <string name="analysis_at_symbol_desc">URL содержит символ @, используемый для скрытия реального назначения.</string>
+    <string name="analysis_suspicious_path_title">Подозрительный Путь</string>
+    <string name="analysis_suspicious_path_desc">Путь URL содержит ключевые слова, обычно используемые в фишинге.</string>
+    <string name="analysis_risky_extension_title">Рискованное Расширение Файла</string>
+    <string name="analysis_risky_extension_desc">URL указывает на потенциально опасный тип файла.</string>
+    <string name="analysis_entropy_title">Случайный Домен</string>
+    <string name="analysis_entropy_desc">Домен выглядит случайно сгенерированным, что типично для фишинга.</string>
+    <string name="analysis_port_title">Необычный Порт</string>
+    <string name="analysis_port_desc">URL использует нестандартный номер порта.</string>
+    
+    <!-- Tags (ScanResultScreen) -->
+    <string name="tag_ip_address">IP-адрес</string>
+    <string name="tag_brand_spoof">Подмена Бренда</string>
+    <string name="tag_insecure">Небезопасный</string>
+    <string name="tag_shortener">Сокращатель</string>
+    <string name="tag_risky_tld">Рискованный TLD</string>
+    <string name="tag_suspicious_path">Подозрительный Путь</string>
+    <string name="tag_long_url">Длинный URL</string>
+    <string name="tag_at_injection">Инъекция @</string>
+    <string name="tag_verified_safe">Подтверждён Безопасным</string>
+    
+    <!-- Status Badges (ScanResultScreen) -->
+    <string name="status_scan_complete">Сканирование Завершено</string>
+    <string name="status_caution_advised">Рекомендуется Осторожность</string>
+    <string name="status_threat_detected">Угроза Обнаружена</string>
+    <string name="status_analysis_complete">Анализ Завершён</string>
+    
+    <!-- Meta Info (ScanResultScreen) -->
+    <string name="meta_analyzed_offline">Проанализировано офлайн за &lt;5мс</string>
+    <string name="meta_no_data_leaves">Данные не покидают устройство</string>
+    
+    <!-- Top Analysis Factors (ScanResultScreen) -->
+    <string name="top_analysis_factors_title">Основные Факторы Анализа</string>
+    <string name="factor_category_https">HTTPS</string>
+    <string name="factor_category_domain">ДОМЕН</string>
+    <string name="factor_category_db_check">ПРОВЕРКА БД</string>
+    <string name="factor_category_heuristics">ЭВРИСТИКА</string>
+    <string name="factor_category_ml">ОЦЕНКА ML</string>
+    <string name="factor_ssl_valid">Действительный SSL Сертификат</string>
+    <string name="factor_ssl_valid_desc">Соединение зашифровано. Цепочка сертификатов проверена.</string>
+    <string name="factor_ssl_missing">Нет SSL Сертификата</string>
+    <string name="factor_ssl_missing_desc">Соединение НЕ зашифровано. Данные могут быть перехвачены.</string>
+    <string name="factor_ip_address">IP-адрес как Хост</string>
+    <string name="factor_ip_address_desc">URL использует IP-адрес вместо доменного имени. Необычно для легитимных сайтов.</string>
+    <string name="factor_domain_check">Анализ Домена</string>
+    <string name="factor_domain_check_desc">Структура домена проанализирована на наличие фишинговых паттернов.</string>
+    <string name="factor_blacklist_clean">Статус Чёрного Списка: Чисто</string>
+    <string name="factor_blacklist_clean_desc">Не найдено в локальных офлайн базах данных угроз.</string>
+    <string name="factor_blacklist_found">Статус Чёрного Списка: НАЙДЕНО</string>
+    <string name="factor_blacklist_found_desc">URL найден в базе данных разведки угроз!</string>
+    <string name="factor_heuristics_title">Эвристический Анализ</string>
+    <string name="factor_heuristics_desc">Оценка: %1$d • %2$d сигналов обнаружено</string>
+    <string name="factor_ml_title">ML Оценка Фишинга</string>
+    <string name="factor_ml_desc">Уверенность модели машинного обучения: %1$d%%</string>
 </resources>
