--- a/androidApp/src/main/res/values-zh/strings.xml
+++ b/androidApp/src/main/res/values-zh/strings.xml
@@ -599,4 +599,84 @@
     <!-- Beat The Bot AI Analysis -->
     <string name="beat_the_bot_ai_analysis">AI 分析</string>
     <string name="beat_the_bot_signals_detected_fmt">检测到 %1$d 个信号</string>
+    
+    <!-- Analysis Breakdown (ScanResultScreen) -->
+    <string name="analysis_brand_title">品牌假冒</string>
+    <string name="analysis_brand_desc">URL 似乎在假冒知名品牌。</string>
+    <string name="analysis_brand_desc_specific">URL 似乎在假冒 %1$s。</string>
+    <string name="analysis_homograph_title">同形字攻击</string>
+    <string name="analysis_homograph_desc">在域名中检测到混合脚本字符，旨在伪造合法品牌。</string>
+    <string name="analysis_protocol_title">不安全协议</string>
+    <string name="analysis_protocol_desc">URL 使用 HTTP 而非 HTTPS。数据未加密。</string>
+    <string name="analysis_tld_title">高风险 TLD</string>
+    <string name="analysis_tld_desc">域名使用通常与恶意网站相关的顶级域名。</string>
+    <string name="analysis_tld_desc_specific">.%1$s TLD 通常用于恶意网站。</string>
+    <string name="analysis_ip_host_title">IP 地址作为主机</string>
+    <string name="analysis_ip_host_desc">URL 使用 IP 地址而非域名，这对于合法网站来说不寻常。</string>
+    <string name="analysis_subdomain_title">深层子域名</string>
+    <string name="analysis_subdomain_desc">URL 有异常数量的子域名，可能用于欺骗用户。</string>
+    <string name="analysis_credential_title">凭据收集</string>
+    <string name="analysis_credential_desc">URL 路径或参数表明存在凭据收集活动。</string>
+    <string name="analysis_long_url_title">URL 长度过长</string>
+    <string name="analysis_long_url_desc">URL 异常长，可能用于隐藏实际目的地。</string>
+    <string name="analysis_scheme_title">危险协议</string>
+    <string name="analysis_scheme_desc">URL 使用可执行代码的危险协议。</string>
+    <string name="analysis_safe_title">URL 已验证安全</string>
+    <string name="analysis_safe_desc">未检测到安全问题。此 URL 看起来可以安全访问。</string>
+    <string name="analysis_no_issues">未检测到安全问题。</string>
+    <string name="analysis_at_symbol_title">@ 符号注入</string>
+    <string name="analysis_at_symbol_desc">URL 包含用于隐藏真实目的地的 @ 符号。</string>
+    <string name="analysis_suspicious_path_title">可疑路径</string>
+    <string name="analysis_suspicious_path_desc">URL 路径包含钓鱼中常用的关键词。</string>
+    <string name="analysis_risky_extension_title">高风险文件扩展名</string>
+    <string name="analysis_risky_extension_desc">URL 指向潜在危险的文件类型。</string>
+    <string name="analysis_entropy_title">随机域名</string>
+    <string name="analysis_entropy_desc">域名看起来是随机生成的，这在钓鱼中很常见。</string>
+    <string name="analysis_port_title">异常端口</string>
+    <string name="analysis_port_desc">URL 使用非标准端口号。</string>
+    
+    <!-- Tags (ScanResultScreen) -->
+    <string name="tag_ip_address">IP 地址</string>
+    <string name="tag_brand_spoof">品牌伪造</string>
+    <string name="tag_insecure">不安全</string>
+    <string name="tag_shortener">短链接</string>
+    <string name="tag_risky_tld">高风险 TLD</string>
+    <string name="tag_suspicious_path">可疑路径</string>
+    <string name="tag_long_url">长 URL</string>
+    <string name="tag_at_injection">@ 注入</string>
+    <string name="tag_verified_safe">已验证安全</string>
+    
+    <!-- Status Badges (ScanResultScreen) -->
+    <string name="status_scan_complete">扫描完成</string>
+    <string name="status_caution_advised">建议谨慎</string>
+    <string name="status_threat_detected">检测到威胁</string>
+    <string name="status_analysis_complete">分析完成</string>
+    
+    <!-- Meta Info (ScanResultScreen) -->
+    <string name="meta_analyzed_offline">离线分析用时 &lt;5ms</string>
+    <string name="meta_no_data_leaves">数据不会离开设备</string>
+    
+    <!-- Top Analysis Factors (ScanResultScreen) -->
+    <string name="top_analysis_factors_title">主要分析因素</string>
+    <string name="factor_category_https">HTTPS</string>
+    <string name="factor_category_domain">域名</string>
+    <string name="factor_category_db_check">数据库检查</string>
+    <string name="factor_category_heuristics">启发式</string>
+    <string name="factor_category_ml">ML 评分</string>
+    <string name="factor_ssl_valid">有效的 SSL 证书</string>
+    <string name="factor_ssl_valid_desc">连接已加密。证书链已验证。</string>
+    <string name="factor_ssl_missing">无 SSL 证书</string>
+    <string name="factor_ssl_missing_desc">连接未加密。数据可能被拦截。</string>
+    <string name="factor_ip_address">IP 地址作为主机</string>
+    <string name="factor_ip_address_desc">URL 使用 IP 地址而非域名。对于合法网站不寻常。</string>
+    <string name="factor_domain_check">域名分析</string>
+    <string name="factor_domain_check_desc">已分析域名结构以检测钓鱼模式。</string>
+    <string name="factor_blacklist_clean">黑名单状态：干净</string>
+    <string name="factor_blacklist_clean_desc">未在本地离线威胁数据库中找到。</string>
+    <string name="factor_blacklist_found">黑名单状态：已发现</string>
+    <string name="factor_blacklist_found_desc">在威胁情报数据库中发现 URL！</string>
+    <string name="factor_heuristics_title">启发式分析</string>
+    <string name="factor_heuristics_desc">评分：%1$d • 检测到 %2$d 个信号</string>
+    <string name="factor_ml_title">ML 钓鱼评分</string>
+    <string name="factor_ml_desc">机器学习模型置信度：%1$d%%</string>
 </resources>
